# lerobot_ur10_gello

./: pyproject.toml  server_train.md
lerobot_robot_ur10/: __init__.py  pyproject.toml
lerobot_robot_ur10/lerobot_robot_ur10/: __init__.py  config_ur10.py  pincopen_gripper.py  ur10.py
lerobot_teleoperator_gello/lerobot_teleoperator_gello/: config_gello.py  gello.py
lerobot_teleoperator_gello/lerobot_teleoperator_gello/calibration_data/: gello_teleop.json
scripts/: calibrate_gello_teleop.py  debug_gello.py  diagnose.py  diagnose_2.py  go_home.py  launch_camera.py  launch_wrist_cam.py  record.py  record_2.py  record_3.py  teleoperate.py  test.py  test_cameras.py
