[project]
name = "lerobot-ur10-gello-dev-env"
version = "0.1.0"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"

dependencies = [
    "ipykernel>=7.1.0",
    "lerobot>=0.4.0",
    "lerobot-robot-ur10",
    "lerobot-teleoperator-gello",
    "matplotlib>=3.10.8",
    "msgpack>=1.0.5",
    "seaborn>=0.13.2",
    "websockets>=11.0",
]

[tool.setuptools.packages.find]
include = [
    "lerobot_robot_ur10",
    "lerobot_teleoperator_gello",
    "openpi_client",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "black",
]

[tool.uv.sources]
lerobot = { git = "https://github.com/F-Fer/lerobot_fix_batch_encoding", rev = "fix/video-batch-encoding" }
lerobot-robot-ur10 = { path = "lerobot_robot_ur10", editable = true }
lerobot-teleoperator-gello = { path = "lerobot_teleoperator_gello", editable = true }
