[project]
name = "lerobot_robot_ur10"
version = "0.1.0"
description = "A lerobot plugin for the UR10 robot with a Pinc'Open Gripper."
requires-python = ">=3.11"

# These are ONLY the dependencies needed for this specific robot
dependencies = [
    "lerobot", 
    "ur-rtde>=1.6.2", 
]

[tool.setuptools]
package-dir = {"lerobot_robot_ur10" = "lerobot_robot_ur10"}
packages = ["lerobot_robot_ur10"]

# This makes setuptools find lerobot_robot_ur10/ inside lerobot_robot_ur10/
# i.e. the inner lerobot_robot_ur10/lerobot_robot_ur10/ becomes the package


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

